removed 'map-of' and 'list.of' because of pitest